@@ -1,4 +1,6 @@
 from zope.interface import implements
+from Products.CMFCore.permissions import ModifyPortalContent
+from Products.CMFCore.utils import _checkPermission
 from plone import api
 from plone.outputfilters.interfaces import IFilter
 from imio.helpers.xhtml import removeCssClasses
@@ -14,18 +16,25 @@ class HighlightRemover(object):
     def __init__(self, context, request):
         self.context = context
         self.request = request
+        self.tool = api.portal.get_tool('portal_plonemeeting')
+        self.cfg = self.tool.getMeetingConfig(self.context)
 
     def is_enabled(self):
-        return True
+        return bool(self.cfg.getCssClassesToHide() and self.cfg.getHideCssClassesTo()) and \
+            not _checkPermission(ModifyPortalContent, self.context)
+
+    def _hideCssClasses(self, hideCssClassesTo):
+        """Hide if current user may not edit current self.context
+           and regarding MeetingConfig.hideCssClassesTo."""
+        if (('power_observers' in hideCssClassesTo and
+             self.tool.isPowerObserverForCfg(self.cfg)) or
+                ('restricted_power_observers' in hideCssClassesTo and
+                 self.tool.isPowerObserverForCfg(self.cfg, isRestricted=True))):
+            return True
+        return False
 
     def __call__(self, data):
-        tool = api.portal.get_tool('portal_plonemeeting')
-        cfg = tool.getMeetingConfig(self.context)
-        hideCssClassesTo = cfg.getHideCssClassesTo()
-        if hideCssClassesTo and \
-           (('power_observers' in hideCssClassesTo and
-             tool.isPowerObserverForCfg(cfg)) or
-                ('restricted_power_observers' in hideCssClassesTo and
-                 tool.isPowerObserverForCfg(cfg, isRestricted=True))):
-            return removeCssClasses(data, css_classes=cfg.getCssClassesToHide())
+        hideCssClassesTo = self.cfg.getHideCssClassesTo()
+        if hideCssClassesTo and self._hideCssClasses(hideCssClassesTo):
+            return removeCssClasses(data, css_classes=self.cfg.getCssClassesToHide())
         return data
